# ragbot

./: .env  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt  vercel.json
apps/api/: main.py
apps/web/: README.md  package.json  pnpm-lock.yaml
apps/web/pages/: index.tsx
scripts/: ingest.py
