[tool.poetry]
name = "ragbot"
version = "0.1.0"
description = "Simple RAG chatbot with FastAPI and LangChain"
authors = ["Mac Anderson <mac@macanderson.com>"]
packages = [
  { include = "packages.vectorstore" }
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
pydantic = "^2.6.0"
uvicorn = "^0.29.0"
langchain = "^0.1.13"
openai = "^1.23.0"
qdrant-client = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
